tests/ui/consts/promoted_const_call.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:8:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:8:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:14:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:14:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:17:26
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:17:27
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------     ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0716`.
